objects/ChargentOrders__Chargent_Automated_Collections__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chargent Automated Collections</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Chargent_Order__c</fullName>
        <label>Chargent Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Contact_Emailed__c</fullName>
        <label>Contact Emailed</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Delete_On__c</fullName>
        <label>Record Auto-Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Received__c</fullName>
        <label>Payment Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Stage__c</fullName>
        <label>Last Stage Activated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Chargent Automated Collections</label>
    <nameField>
        <displayFormat>AC-{000000000}</displayFormat>
        <label>Chargent Automated Collections ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent Automated Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>